# VideoRecoder

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jingju/videorecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_test.cpp  native-lib.cpp
app/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp
app/src/main/cpp/include/: ffmpeg_test.h
app/src/main/cpp/livecore/audio_encoder/: audio_encoder.cpp
app/src/main/cpp/livecore/platform_dependent/: platform_4_live_ffmpeg.h
app/src/main/cpp/music_decoder/: aac_accompany_decoder.cpp
app/src/main/cpp/native/: ChangbaRecordingPreviewScheduler.cpp  MusicDecoder.cpp  NativeRecordProcessor.cpp  VideoStudio.cpp  com_jingju_videorecorder_songstudio_Videostudio.h  com_jingju_videorecorder_songstudio_decoder_MusicDecoder.h  com_jingju_videorecorder_songstudio_recorder_NativeRecordProcessor.h  com_jingju_videorecorder_songstudio_recording_camera_preview_RecordingPreviewScheduler.h
app/src/main/cpp/recorder_processor/: record_processor.cpp
app/src/main/cpp/video_encoder/soft_encoder/: video_x264_encoder.cpp  video_x264_encoder.h
app/src/main/java/com/jingju/videorecorder/media/ushow/utils/: FilePathUtil.java  StringUtil.java
app/src/main/java/com/jingju/videorecorder/media/ushow/webrtcdemo/: AlwaysMarqueeTextView.java  MainActivity.java  Song.java  SongSelectionActivity.java  VideoRecorderActivity.java
app/src/main/java/com/jingju/videorecorder/songstudio/: PacketBufferTimeEnum.java  Songstudio.java  Videostudio.java
app/src/main/java/com/jingju/videorecorder/songstudio/decoder/: Mp3Decoder.java  MusicDecoder.java
app/src/main/java/com/jingju/videorecorder/songstudio/media/: AudioRecordController.java  AudioRecordEchoController.java  SoundRecordController.java  SoundTrackController.java
app/src/main/java/com/jingju/videorecorder/songstudio/player/accompany/: NativeMp3Player.java
app/src/main/java/com/jingju/videorecorder/songstudio/recorder/: MockRecordProcessor.java  NativeRecordProcessor.java  RecordProcessor.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/: RecordingImplType.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/camera/exception/: CameraParamSettingException.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/camera/preview/: CameraConfigInfo.java  PreviewFilterType.java  RecordingPreviewScheduler.java  RecordingPreviewView.java  VideoCamera.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/exception/: AudioConfigurationException.java  InitConsumerThreadFailException.java  InitLivePublisherFailException.java  InitPlayerFailException.java  InitRecorderFailException.java  RecordingStudioException.java  RecordingStudioNullArgumentException.java  StartRecordingException.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/service/: AbstractPlayerServiceImpl.java  PlayerService.java  RecorderService.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/service/factory/: PlayerServiceFactory.java  RecorderServiceFactory.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/service/impl/: AudioRecordRecorderServiceImpl.java  AudioTrackPlayerServiceImpl.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/video/: CommonVideoRecordingStudio.java  VideoRecordingStudio.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/video/service/: MediaRecorderService.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/video/service/factory/: MediaRecorderServiceFactory.java
app/src/main/java/com/jingju/videorecorder/songstudio/recording/video/service/impl/: MediaRecorderServiceImpl.java
app/src/main/java/com/jingju/videorecorder/songstudio/util/: Base64.java  DesEncode.java
app/src/main/java/com/jingju/videorecorder/songstudio/video/encoder/: HWEncoderServerBlackListHelper.java  MediaCodecEncoderLifeCycle.java  MediaCodecMemoryEncoder.java  MediaCodecSurfaceEncoder.java
app/src/main/java/com/jingju/videorecorder/utils/: BaseContext.java  BrandUtils.java  CanPauseCountDownTimer.java  CommonUtils.java  Constant.java  ContextUtil.java  DisplayUtil.java  EncryptUtil.java  FileProviderUtil.java  FileUtil.java  ImageUtil.java  LogUtils.java  OSUtils.java  ThreadUtils.java  ToastUtils.java
app/src/main/java/com/jingju/videorecorder/utils/permission/: ActivityPermissionDispatcher.java  FragmentPermissionDispatcher.java  PermissionCallback.java  PermissionState.java  PermissionUtil.java
app/src/main/res/layout/: activity_main.xml  record_video_surfaceview_filter_activity.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/jingju/videorecorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
